--- a/index.html
+++ b/index.html
@@ -13,67 +13,40 @@
 		
 	</head>
 	<body>
-		
-		<header class="container">
-			<div class="row">
-				<div class="col-xs-12">
-					<h1>Hangman Game<br><small>Paises</small></h1>
-				</div>
-			</div>
-		</header>
-			
-
+	
 		<div class="container">
-			<div class="row bg-info">
-				<!-- colum 1 -->
-				<div class="col-xs-12 col-sm-6">
-					<img src="http://placehold.it/350x350" alt="ilustracao">
-				</div>
-				<!-- colum 2 -->
-				<div class="col-xs-12 col-sm-6">
+		  <div class="row">
+		    <div class="col-sm-12">
+		      <div class="page-header">
+		        <h1>Hangman Game <br><small>Star Wars</small></h1>
+		      </div>
+		    </div>
+		  </div>
 
-					<div class="row bg-success">
-						<h2 id="press-start"></h2>
-					</div>
-
-					<div class="row bg-warnig">
-						<div class="col-xs-3">
-							<h4>Win: <span id="times-win"></span></h4>
-						</div>
-						<div class="col-xs-3">
-							<h4>Lose: <span id="times-lose"></span></h4>
-						</div>
-						<div class="col-xs-6">
-							<h4>Remaning Guess: <span id="n-guesses"></span></h4>
-						</div>
-					</div>
-	
-					<div class="row bg-primary">
-						<p>Current Word</p>
-						<h2 id="word" class="tex-center"></h2>
-					</div>
-					<div class="row bg-info">
-						<p>Wrong Guesses</p>
-						<h2 id="wrong-guess"></h2>
-					</div>
-				</div>
-			</div>
+		  <div class="row">
+		    <div class="col-sm-4">
+		      <div class="panel panel-default">
+		        <div class="panel-body">
+		          <p>Press the letter keys on your keyboard to guess the letters in the name of a famous film.</p>
+		          <p class="h5">Wins:</p><p class="h4" id="times-win"></p>
+		          <p class="h5">Losses:</p><p class="h4" id="times-lose"></p>
+		          <p class="h5">Remaining Tries:</p><p class="h4" id="n-guesses"></p>
+		        </div>
+		      </div>
+		    </div>
+		    <div class="col-sm-8">
+		      <div class="panel panel-default">
+		        <div class="panel-body">
+		          <div class="well"><h3 class="text-center" id="word"></h3></div>
+		          <h5 class="text-center">Incorrect Guesses: </h5><h4 class="text-center" id="wrong-guess"></h4>
+		          <div class="row">
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
+		  <div class="row"></div>
 		</div>
-
-
-
-
-	
-
-
-
-
-
-
-
-
-
-
 	
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
