--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  <div class="row">
 		    <div class="col-sm-12">
 		      <div class="page-header">
-		        <h1>Hangman Game <br><small>Star Wars</small></h1>
+		        <h1>Hangman Game <br><small>Solar System</small></h1>
 		      </div>
 		    </div>
 		  </div>
