--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		      <div class="panel panel-default">
 		        <div class="panel-body">
 		          <p>Press the letter keys on your keyboard to guess the letters in the name of a famous film.</p>
-		          <p class="h5">Wins:</p><p class="h4" id="times-win"></p>
-		          <p class="h5">Losses:</p><p class="h4" id="times-lose"></p>
-		          <p class="h5">Remaining Tries:</p><p class="h4" id="n-guesses"></p>
+		          <p class="h5">Wins:</p><p class="h4" id="times-win">0</p>
+		          <p class="h5">Losses:</p><p class="h4" id="times-lose">0</p>
+		          <p class="h5">Remaining Tries:</p><p class="h4" id="n-guesses">10</p>
 		        </div>
 		      </div>
 		    </div>
@@ -45,7 +45,9 @@
 		      </div>
 		    </div>
 		  </div>
-		  <div class="row"></div>
+		  <div class="row">
+		  
+		  </div>
 		</div>
 	
 		<!-- Latest compiled and minified JavaScript -->
