--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		    <div class="col-sm-4">
 		      <div class="panel panel-default">
 		        <div class="panel-body">
-		          <p>Press the letter keys on your keyboard to guess the letters in the name of a famous film.</p>
+		          <p>Press the keys on your keyboard to guess planets of our solar system.</p>
 		          <p class="h5">Wins:</p><p class="h4" id="times-win">0</p>
 		          <p class="h5">Losses:</p><p class="h4" id="times-lose">0</p>
 		          <p class="h5">Remaining Tries:</p><p class="h4" id="n-guesses">10</p>
@@ -45,8 +45,14 @@
 		      </div>
 		    </div>
 		  </div>
+		  <hr>
 		  <div class="row">
-		  
+	  		<div style="display: none" id="winVideo" class=" col-xs-4  text-center pull-right">
+	  			<h5>Click in the videos to learn more about the cosmos.</h5>
+  				<a href="https://en.wikipedia.org/wiki/Cosmos:_A_Spacetime_Odyssey"><video width="320" height="240" controls autoplay>
+  			  <source src="./assets/media/cosmos.mp4" type="video/mp4">
+  			  </video></a>
+	  		</div>
 		  </div>
 		</div>
 	
